--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -107,7 +107,8 @@
                 android:drawablePadding="@dimen/y5"
                 android:text="25%"
                 android:textColor="#FFFFFF"
-                android:textSize="@dimen/sp12" />
+                android:textSize="@dimen/sp12"
+                android:visibility="invisible" />
 
             <ImageView
                 android:id="@+id/act_panorama_camera_banner_information_charge_icon"
@@ -118,7 +119,8 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="@dimen/y15"
                 android:layout_marginRight="@dimen/y15"
-                android:src="@drawable/camera720_icon_electricity_charge" />
+                android:src="@drawable/camera720_icon_electricity_charge"
+                android:visibility="invisible" />
 
 
         </RelativeLayout>
@@ -232,26 +234,26 @@
             tools:layout_editor_absoluteX="153dp">
 
             <RadioGroup
-            android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_item"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="horizontal">
+                android:id="@+id/act_panorama_camera_bottom_panel_switcher_menu_item"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-            <RadioButton
-            android:id="@+id/act_panorama_camera_bottom_panel_picture"
-            android:layout_width="@dimen/y26"
-            android:layout_height="@dimen/y26"
-            android:button="@drawable/camera720_icon_camera_selector"
-            android:checked="true" />
+                <RadioButton
+                    android:id="@+id/act_panorama_camera_bottom_panel_picture"
+                    android:layout_width="@dimen/y26"
+                    android:layout_height="@dimen/y26"
+                    android:button="@drawable/camera720_icon_camera_selector"
+                    android:checked="true" />
 
-            <RadioButton
-            android:id="@+id/act_panorama_camera_bottom_panel_video"
-            android:layout_width="@dimen/y26"
-            android:layout_height="@dimen/y26"
-            android:layout_marginLeft="@dimen/y19"
-            android:layout_marginStart="@dimen/y19"
-            android:button="@drawable/camera720_icon_video_selector" />
+                <RadioButton
+                    android:id="@+id/act_panorama_camera_bottom_panel_video"
+                    android:layout_width="@dimen/y26"
+                    android:layout_height="@dimen/y26"
+                    android:layout_marginLeft="@dimen/y19"
+                    android:layout_marginStart="@dimen/y19"
+                    android:button="@drawable/camera720_icon_video_selector" />
             </RadioGroup>
 
             <android.support.constraint.ConstraintLayout
