--- a/app/src/main/res/layout/activity_bind_panorama_cam.xml
+++ b/app/src/main/res/layout/activity_bind_panorama_cam.xml
@@ -20,7 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:padding="@dimen/y15"
-        android:src="@drawable/icon_explain_gray" />
+        android:src="@drawable/icon_explain_gray"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/tv_main_content"
@@ -71,7 +72,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/add_image_bulelight" />
+                android:alpha="0"
+                android:src="@drawable/add_image_bulelight"
+                android:visibility="visible" />
 
         </FrameLayout>
 
@@ -89,8 +92,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="-20dp"
+                android:alpha="0"
                 android:src="@drawable/add_image_red_dot"
-                android:visibility="invisible" />
+                android:visibility="visible" />
 
             <ImageView
                 android:id="@+id/imgV_camera_hand"
