--- a/app/src/main/res/layout/activity_panorama_detail.xml
+++ b/app/src/main/res/layout/activity_panorama_detail.xml
@@ -70,7 +70,6 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:padding="0dp"
-                android:progress="40"
                 android:progressDrawable="@drawable/seek_bar_drawable"
                 android:secondaryProgress="70"
                 android:thumb="@drawable/panorama_detial_seek_bar_thumb_drawable" />
@@ -97,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
-                    android:text="00:16"
+                    android:text="00:00/00:00"
                     android:textColor="@color/color_panorama_detail_text"
                     android:textSize="@dimen/sp11" />
 
