--- a/app/src/main/res/layout/activity_bind_rs_cam.xml
+++ b/app/src/main/res/layout/activity_bind_rs_cam.xml
@@ -40,11 +40,13 @@
 
     <ImageView
         android:id="@+id/imgv_animation"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/tv_bind_camera_tip"
         android:layout_below="@+id/tv_sub_title"
         android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="-20dp" />
     <!--<FrameLayout-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="wrap_content"-->
