开始使用treeNode管理红点

--- a/app/src/main/res/layout/layout_home_mine_item.xml
+++ b/app/src/main/res/layout/layout_home_mine_item.xml
@@ -35,9 +35,9 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/x10"
-        android:layout_marginTop="40dp"
         android:layout_toStartOf="@+id/iv_home_mine_item_friend"
         android:gravity="center"
+        android:text="11"
         android:textColor="@color/color_white"
         android:textSize="@dimen/sp10"
         app:bg_color="@color/color_red"
