--- a/app/src/main/res/layout/fragment_home_mine_friends.xml
+++ b/app/src/main/res/layout/fragment_home_mine_friends.xml
@@ -72,7 +72,7 @@
         <RelativeLayout
             android:id="@+id/ll_relative_and_friend_none"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
 
@@ -105,11 +105,6 @@
                 android:textColor="@color/color_white"
                 android:textSize="@dimen/sp17" />
         </RelativeLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y10"
-            android:background="@drawable/little_shape" />
 
     </FrameLayout>
 
