--- a/app/src/main/res/layout/layout_item_home_page_list.xml
+++ b/app/src/main/res/layout/layout_item_home_page_list.xml
@@ -122,6 +122,13 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/x2"
             android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/img_device_state_5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/x2"
+            android:visibility="gone" />
     </LinearLayout>
 
     <View
