--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -130,8 +130,20 @@
     <declare-styleable name="LoginButton">
         <attr name="lb_stroke_color" format="color" />
     </declare-styleable>
+
     <declare-styleable name="SmoothPercent">
         <attr name="sp_color" format="color" />
+    </declare-styleable>
+
+    <declare-styleable name="Cbutton">
+        <attr name="cb_color" format="color|reference" />
+        <attr name="cb_radius" format="reference|dimension" />
+        <attr name="cb_padding_top" format="reference|dimension" />
+    </declare-styleable>
+    <declare-styleable name="HintTextView">
+        <attr name="ht_color" format="color|reference" />
+        <attr name="ht_radius" format="reference|dimension" />
+        <attr name="ht_padding" format="reference|dimension" />
     </declare-styleable>
 
     <declare-styleable name="NumberBadgeStyle">
