--- a/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
+++ b/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
@@ -182,13 +182,13 @@
                 app:sw_textColor="@color/color_FFAAAAAA" />
 
             <LinearLayout
-                android:visibility="invisible"
                 android:id="@+id/tv_cam_live_land_bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toStartOf="@+id/layout_land_flip"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="invisible">
 
                 <View
                     android:id="@+id/v_flag"
@@ -291,5 +291,53 @@
             android:layout_gravity="center" />
     </FrameLayout>
 
+    <com.cylan.jiafeigou.widget.Switcher
+        android:id="@+id/sv_switch_stream"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/v_guide"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="@dimen/x46"
+        android:layout_marginEnd="@dimen/x10"
+        android:visibility="gone">
 
+        <TextView
+            android:id="@+id/switch_hd"
+            android:layout_width="@dimen/x48"
+            android:layout_height="@dimen/x21"
+            android:layout_marginEnd="@dimen/x5"
+            android:layout_marginStart="@dimen/x5"
+            android:background="@drawable/flow_bg"
+            android:gravity="center"
+            android:text="@string/Tap1_Camera_Video_HD"
+            android:textColor="@color/color_white"
+            android:textSize="@dimen/sp12"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/switch_sd"
+            android:layout_width="@dimen/x48"
+            android:layout_height="@dimen/x21"
+            android:layout_marginEnd="@dimen/x5"
+            android:layout_marginStart="@dimen/x5"
+            android:background="@drawable/flow_bg"
+            android:gravity="center"
+            android:text="@string/Tap1_Camera_Video_SD"
+            android:textColor="@color/color_white"
+            android:textSize="@dimen/sp12"
+            android:visibility="invisible" />
+
+        <TextView
+            android:layout_width="@dimen/x48"
+            android:layout_height="@dimen/x21"
+            android:layout_marginStart="@dimen/x5"
+            android:background="@drawable/flow_bg"
+            android:drawablePadding="@dimen/x3"
+            android:drawableStart="@drawable/icon_rate_arrow"
+            android:gravity="center"
+            android:paddingStart="@dimen/x4"
+            android:text="@string/Tap1_Camera_Video_Auto"
+            android:textColor="@color/color_white"
+            android:textSize="@dimen/sp12" />
+    </com.cylan.jiafeigou.widget.Switcher>
 </com.cylan.jiafeigou.n.view.cam.CamLiveControllerEx>
