--- a/app/src/main/res/layout/activity_panorama_album.xml
+++ b/app/src/main/res/layout/activity_panorama_album.xml
@@ -60,20 +60,31 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/act_panorama_album_toolbar_container">
 
-        <FrameLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/act_panorama_refresh_header"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/y44"
+                android:layout_centerInParent="true"
+                android:drawableStart="@drawable/camera720_loading"
+                android:gravity="center"
+                android:text="@string/REFRESHING"
+                android:visibility="gone" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/act_panorama_album_lists"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_below="@+id/act_panorama_refresh_header" />
 
             <include
                 layout="@layout/layout_panorama_empty_photo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-        </FrameLayout>
+        </RelativeLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <FrameLayout
