--- a/app/src/main/res/drawable/panorama_camera_quick_menu_item3.xml
+++ b/app/src/main/res/drawable/panorama_camera_quick_menu_item3.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
 
     <corners android:radius="@dimen/y21" />
-    <solid android:color="#000000" />
+    <solid android:color="#66000000" />
 </shape>
