--- a/app/src/main/res/layout/fragment_submit_binding_info.xml
+++ b/app/src/main/res/layout/fragment_submit_binding_info.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/color_white"
     android:clickable="true"
+    android:keepScreenOn="true"
     android:orientation="vertical">
 
 
