--- a/app/src/main/res/layout/activity_panorama_camera.xml
+++ b/app/src/main/res/layout/activity_panorama_camera.xml
@@ -91,7 +91,7 @@
                 android:layout_marginStart="@dimen/y10"
                 android:layout_toEndOf="@+id/act_panorama_camera_banner_information_connection_icon"
                 android:layout_toRightOf="@+id/act_panorama_camera_banner_information_connection_icon"
-                android:text="WiFi连接"
+                android:text="@string/WIFI_CONN"
                 android:textColor="#FFFFFF"
                 android:textSize="@dimen/sp12" />
 
@@ -105,7 +105,6 @@
                 android:layout_toLeftOf="@+id/act_panorama_camera_banner_information_charge_icon"
                 android:layout_toStartOf="@+id/act_panorama_camera_banner_information_charge_icon"
                 android:drawablePadding="@dimen/y5"
-                android:text="25%"
                 android:textColor="#FFFFFF"
                 android:textSize="@dimen/sp12"
                 android:visibility="invisible" />
