--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -138,6 +138,7 @@
     </declare-styleable>
     <declare-styleable name="SettingItemViewStyle">
         <attr name="sv_red_hint" format="boolean|reference" />
+        <attr name="sv_title_hint" format="boolean|reference" />
         <attr name="sv_title" format="string|reference" />
         <attr name="sv_sub_title" format="string|reference" />
         <attr name="sv_sub_title_max_len" format="integer" />
